--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <video id="video"  src="https://htmlreference.io/assets/HTML%205%20Video.mp4" width="750" height="500">
     </video>
     <button id="btn">Play/Pause</button>
-    <script src="index.js"></script>
+    <script type="module" src="assets/index.js"></script>
 </body>
 </html>
